docs fix pre overflow

--- a/demos/shared.css
+++ b/demos/shared.css
@@ -22,6 +22,10 @@ body {
   color: var(--md-sys-color-on-background);
 }
 
+pre {
+  overflow: auto;
+}
+
 .outer-link {
   -webkit-tap-highlight-color: transparent;
   text-decoration: none;
